--- a/WebSite/package.json
+++ b/WebSite/package.json
@@ -15,13 +15,14 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/material": "^13.3.5",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@icenore/ng-tm-colors-text": "^1.2.4",
-    "ng-colored-tm-text": "^1.0.1",
+    "ng-colored-tm-text": "^1.0.4",
     "ng-http-loader": "^11.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
