--- a/WebSite/package.json
+++ b/WebSite/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@icenore/ng-tm-colors-text": "^1.2.4",
+    "firebase": "^9.7.0",
     "ng-colored-tm-text": "^1.0.4",
     "ng-http-loader": "^11.0.1",
     "rxjs": "~7.5.0",
