--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install angular CLI
+        run: npm install -g @angular/cli
       - name: Build project
         working-directory: ./WebSite
         run: npm run build
