--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -5,20 +5,18 @@ name: Deploy to Firebase Hosting on merge
 'on':
   push:
     branches:
-      - 'y'
+      - main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install angular CLI
-        run: npm install -g @angular/cli
-      - name: Build project
-        working-directory: ./WebSite
-        run: npm install && npm run build
+      - name: start server
+        working-directory: ./back
+        run: npm run start
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TRACKMANIAYO }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TRACKMANIAYO_API }}'
           channelId: live
-          projectId: trackmaniayo
+          projectId: trackmaniayo-api
