--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
     "nodemon": "^2.0.16"
   }
 }
